# stannox-old2

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml
assets/shaders/: triangle.vert  voxel.frag  voxel.vert
src/: camera.rs  main.rs
src/client/: camera.rs  mod.rs  window.rs
src/vk/: instance.rs  mod.rs  renderable.rs  voxel_mesh.rs
src/voxel/: chunk.rs  coord.rs  mesh.rs  mod.rs  object.rs
