[package]
name = "stannox"
version = "0.1.0"
edition = "2018"

[dependencies]
erupt = "0.19.0"
vk-alloc = "1.3.1"

winit = "0.25.0"
raw-window-handle = "0.3.3"

uv = { package = "ultraviolet", version = "0.8.1", features = [ "int" ] }
num-traits = "0.2.14"

log = "0.4.14"
env_logger = "0.9.0"

[build-dependencies]
shaderc = "0.7.2"